--- a/packages/sewing-kit-plugin-quilt/package.json
+++ b/packages/sewing-kit-plugin-quilt/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/sewing-kit-plugin-quilt",
-  "version": "0.3.2",
+  "version": "0.4.0",
   "description": "Quilt plugins for sewing-kit",
   "publishConfig": {
     "access": "public",
@@ -39,6 +39,5 @@
   "engines": {
     "node": ">=12.14.0"
   },
-  "sideEffects": false,
-  "dependencies": {}
+  "sideEffects": false
 }
