Update typescript to v4.3.5 (#1997)
Emit declarations only, don't ship js compiled by typescript

--- a/config/typescript/tsconfig.base.json
+++ b/config/typescript/tsconfig.base.json
@@ -2,6 +2,7 @@
   "extends": "@shopify/typescript-configs/library.json",
   "compilerOptions": {
     "composite": true,
+    "emitDeclarationOnly": true,
     // Strict mode enables these strict* and noImplicit* options.
     // Disable them temporarily while we fix up problematic behaviour from
     // the time before we wanted strict mode
