exclude test build files from packages

--- a/packages/async/package.json
+++ b/packages/async/package.json
@@ -40,8 +40,9 @@
     "@types/webpack": "^4.0.0"
   },
   "files": [
-    "build/*",
+    "build",
     "!build/*.tsbuildinfo",
+    "!build/ts/**/*.test.*",
     "index.js",
     "index.mjs",
     "index.esnext",
