--- a/packages/react-effect/package.json
+++ b/packages/react-effect/package.json
@@ -34,8 +34,9 @@
     "@types/react-dom": "^16.0.11"
   },
   "files": [
-    "build/*",
+    "build",
     "!build/*.tsbuildinfo",
+    "!build/ts/**/*.test.*",
     "index.js",
     "index.mjs",
     "index.esnext",
