--- a/packages/react-form/package.json
+++ b/packages/react-form/package.json
@@ -31,8 +31,9 @@
     "faker": "^4.1.0"
   },
   "files": [
-    "build/*",
+    "build",
     "!build/*.tsbuildinfo",
+    "!build/ts/**/*.test.*",
     "index.js",
     "index.mjs",
     "index.esnext"
