--- a/packages/address-mocks/package.json
+++ b/packages/address-mocks/package.json
@@ -31,8 +31,9 @@
     "@shopify/jest-dom-mocks": "^3.0.5"
   },
   "files": [
-    "build/*",
+    "build",
     "!build/*.tsbuildinfo",
+    "!build/ts/**/*.test.*",
     "index.js",
     "index.mjs",
     "index.esnext"
