--- a/packages/address/package.json
+++ b/packages/address/package.json
@@ -31,8 +31,9 @@
     "@shopify/address-consts": "^3.0.4"
   },
   "files": [
-    "build/*",
+    "build",
     "!build/*.tsbuildinfo",
+    "!build/ts/**/*.test.*",
     "index.js",
     "index.mjs",
     "index.esnext"
