--- a/packages/css-utilities/package.json
+++ b/packages/css-utilities/package.json
@@ -27,8 +27,9 @@
     "classnames": "^2.3.1"
   },
   "files": [
-    "build/*",
+    "build",
     "!build/*.tsbuildinfo",
+    "!build/ts/**/*.test.*",
     "index.js",
     "index.mjs",
     "index.esnext"
