--- a/packages/dates/package.json
+++ b/packages/dates/package.json
@@ -30,8 +30,9 @@
     "@shopify/jest-dom-mocks": "^3.0.5"
   },
   "files": [
-    "build/*",
+    "build",
     "!build/*.tsbuildinfo",
+    "!build/ts/**/*.test.*",
     "index.js",
     "index.mjs",
     "index.esnext"
