--- a/packages/jest-koa-mocks/package.json
+++ b/packages/jest-koa-mocks/package.json
@@ -32,8 +32,9 @@
   },
   "sideEffects": false,
   "files": [
-    "build/*",
+    "build",
     "!build/*.tsbuildinfo",
+    "!build/ts/**/*.test.*",
     "index.js",
     "index.mjs",
     "index.esnext"
