--- a/packages/koa-metrics/package.json
+++ b/packages/koa-metrics/package.json
@@ -33,8 +33,9 @@
   },
   "sideEffects": false,
   "files": [
-    "build/*",
+    "build",
     "!build/*.tsbuildinfo",
+    "!build/ts/**/*.test.*",
     "index.js",
     "index.mjs",
     "index.esnext"
