--- a/packages/react-async/package.json
+++ b/packages/react-async/package.json
@@ -43,8 +43,9 @@
     "react": ">=16.8.0 <18.0.0"
   },
   "files": [
-    "build/*",
+    "build",
     "!build/*.tsbuildinfo",
+    "!build/ts/**/*.test.*",
     "index.js",
     "index.mjs",
     "index.esnext",
