--- a/packages/react-compose/package.json
+++ b/packages/react-compose/package.json
@@ -31,8 +31,9 @@
   },
   "sideEffects": false,
   "files": [
-    "build/*",
+    "build",
     "!build/*.tsbuildinfo",
+    "!build/ts/**/*.test.*",
     "index.js",
     "index.mjs",
     "index.esnext"
