--- a/packages/react-html/package.json
+++ b/packages/react-html/package.json
@@ -47,8 +47,9 @@
   },
   "sideEffects": false,
   "files": [
-    "build/*",
+    "build",
     "!build/*.tsbuildinfo",
+    "!build/ts/**/*.test.*",
     "index.js",
     "index.mjs",
     "index.esnext",
