--- a/packages/react-performance/package.json
+++ b/packages/react-performance/package.json
@@ -33,8 +33,9 @@
     "@shopify/network": "^2.0.2"
   },
   "files": [
-    "build/*",
+    "build",
     "!build/*.tsbuildinfo",
+    "!build/ts/**/*.test.*",
     "index.js",
     "index.mjs",
     "index.esnext"
