--- a/packages/react-server/package.json
+++ b/packages/react-server/package.json
@@ -69,8 +69,9 @@
     "webpack-virtual-modules": "^0.4.3"
   },
   "files": [
-    "build/*",
+    "build",
     "!build/*.tsbuildinfo",
+    "!build/ts/**/*.test.*",
     "index.js",
     "index.mjs",
     "index.esnext",
