apply type-check to tests without type errors

--- a/packages/csrf-token-fetcher/tsconfig.json
+++ b/packages/csrf-token-fetcher/tsconfig.json
@@ -8,7 +8,6 @@
   "include": [
     "../../config/typescript/*.d.ts",
     "./src/**/*.ts",
-    "./src/**/*.tsx"
-  ],
-  "exclude": ["**/test/**/*", "**/tests/**/*"]
+    "./src/**/*.ts"
+  ]
 }
