--- a/packages/semaphore/tsconfig.json
+++ b/packages/semaphore/tsconfig.json
@@ -5,6 +5,5 @@
     "rootDir": "src",
     "baseUrl": "src"
   },
-  "include": ["../../config/typescript/*.d.ts", "./src/**/*.ts"],
-  "exclude": ["**/*.test.ts"]
+  "include": ["../../config/typescript/*.d.ts", "./src/**/*.ts"]
 }
