--- a/packages/graphql-persisted/package.json
+++ b/packages/graphql-persisted/package.json
@@ -43,7 +43,7 @@
     "@shopify/sewing-kit-koa": "^6.4.5"
   },
   "files": [
-    "build",
+    "build/",
     "!build/*.tsbuildinfo",
     "!build/ts/**/*.test.*",
     "apollo.js",
