--- a/packages/polyfills/package.json
+++ b/packages/polyfills/package.json
@@ -103,7 +103,7 @@
     "@types/caniuse-api": "^3.0.0"
   },
   "files": [
-    "build",
+    "build/",
     "!build/*.tsbuildinfo",
     "!build/ts/**/*.test.*",
     "index.js",
