--- a/packages/react-cookie/package.json
+++ b/packages/react-cookie/package.json
@@ -33,7 +33,7 @@
     "react-dom": ">=16.8.0 <18.0.0"
   },
   "files": [
-    "build",
+    "build/",
     "!build/*.tsbuildinfo",
     "!build/ts/**/*.test.*",
     "index.js",
