--- a/packages/react-form-state/package.json
+++ b/packages/react-form-state/package.json
@@ -35,7 +35,7 @@
   },
   "sideEffects": false,
   "files": [
-    "build",
+    "build/",
     "!build/*.tsbuildinfo",
     "!build/ts/**/*.test.*",
     "index.js",
