--- a/packages/react-html/package.json
+++ b/packages/react-html/package.json
@@ -47,7 +47,7 @@
   },
   "sideEffects": false,
   "files": [
-    "build",
+    "build/",
     "!build/*.tsbuildinfo",
     "!build/ts/**/*.test.*",
     "index.js",
