--- a/packages/ast-utilities/package.json
+++ b/packages/ast-utilities/package.json
@@ -42,7 +42,7 @@
     "@types/unist": "^2.0.3"
   },
   "files": [
-    "build",
+    "build/",
     "!build/*.tsbuildinfo",
     "!build/ts/**/*.test.*",
     "index.js",
