--- a/packages/koa-metrics/package.json
+++ b/packages/koa-metrics/package.json
@@ -33,7 +33,7 @@
   },
   "sideEffects": false,
   "files": [
-    "build",
+    "build/",
     "!build/*.tsbuildinfo",
     "!build/ts/**/*.test.*",
     "index.js",
