--- a/packages/koa-performance/package.json
+++ b/packages/koa-performance/package.json
@@ -40,7 +40,7 @@
     "@shopify/with-env": "^2.0.2"
   },
   "files": [
-    "build",
+    "build/",
     "!build/*.tsbuildinfo",
     "!build/ts/**/*.test.*",
     "index.js",
