--- a/packages/logger/package.json
+++ b/packages/logger/package.json
@@ -29,7 +29,7 @@
   },
   "sideEffects": false,
   "files": [
-    "build",
+    "build/",
     "!build/*.tsbuildinfo",
     "!build/ts/**/*.test.*",
     "index.js",
