--- a/packages/react-effect/package.json
+++ b/packages/react-effect/package.json
@@ -34,7 +34,7 @@
     "@types/react-dom": "^16.0.11"
   },
   "files": [
-    "build",
+    "build/",
     "!build/*.tsbuildinfo",
     "!build/ts/**/*.test.*",
     "index.js",
