--- a/packages/react-hooks/package.json
+++ b/packages/react-hooks/package.json
@@ -27,7 +27,7 @@
     "node": ">=12.14.0"
   },
   "files": [
-    "build",
+    "build/",
     "!build/*.tsbuildinfo",
     "!build/ts/**/*.test.*",
     "index.js",
