--- a/packages/react-i18n/package.json
+++ b/packages/react-i18n/package.json
@@ -71,7 +71,7 @@
     "fs-extra": "^9.1.0"
   },
   "files": [
-    "build",
+    "build/",
     "!build/*.tsbuildinfo",
     "!build/ts/**/*.test.*",
     "index.js",
