--- a/packages/react-import-remote/package.json
+++ b/packages/react-import-remote/package.json
@@ -34,7 +34,7 @@
   },
   "sideEffects": false,
   "files": [
-    "build",
+    "build/",
     "!build/*.tsbuildinfo",
     "!build/ts/**/*.test.*",
     "index.js",
