--- a/packages/react-shortcuts/package.json
+++ b/packages/react-shortcuts/package.json
@@ -27,7 +27,7 @@
   },
   "sideEffects": false,
   "files": [
-    "build",
+    "build/",
     "!build/*.tsbuildinfo",
     "!build/ts/**/*.test.*",
     "index.js",
