--- a/packages/web-worker/package.json
+++ b/packages/web-worker/package.json
@@ -55,7 +55,7 @@
     "koa-mount": "^3.0.0"
   },
   "files": [
-    "build",
+    "build/",
     "!build/*.tsbuildinfo",
     "!build/ts/**/*.test.*",
     "index.js",
