--- a/packages/with-env/package.json
+++ b/packages/with-env/package.json
@@ -24,7 +24,7 @@
   },
   "sideEffects": false,
   "files": [
-    "build",
+    "build/",
     "!build/*.tsbuildinfo",
     "!build/ts/**/*.test.*",
     "index.js",
