update test exclude for packages

--- a/packages/graphql-persisted/package.json
+++ b/packages/graphql-persisted/package.json
@@ -45,7 +45,7 @@
   "files": [
     "build/",
     "!build/*.tsbuildinfo",
-    "!build/ts/**/*.test.*",
+    "!build/ts/**/tests/",
     "apollo.js",
     "apollo.mjs",
     "apollo.esnext",
