--- a/packages/react-network/package.json
+++ b/packages/react-network/package.json
@@ -51,7 +51,7 @@
   "files": [
     "build/",
     "!build/*.tsbuildinfo",
-    "!build/ts/**/*.test.*",
+    "!build/ts/**/tests/",
     "index.js",
     "index.mjs",
     "index.esnext",
