--- a/packages/ast-utilities/package.json
+++ b/packages/ast-utilities/package.json
@@ -44,7 +44,7 @@
   "files": [
     "build/",
     "!build/*.tsbuildinfo",
-    "!build/ts/**/*.test.*",
+    "!build/ts/**/tests/",
     "index.js",
     "index.mjs",
     "index.esnext",
