--- a/packages/graphql-config-utilities/package.json
+++ b/packages/graphql-config-utilities/package.json
@@ -30,7 +30,7 @@
   "files": [
     "build/",
     "!build/*.tsbuildinfo",
-    "!build/ts/**/*.test.*",
+    "!build/ts/**/tests/",
     "index.js",
     "index.mjs",
     "index.esnext"
