--- a/packages/polyfills/package.json
+++ b/packages/polyfills/package.json
@@ -105,7 +105,7 @@
   "files": [
     "build/",
     "!build/*.tsbuildinfo",
-    "!build/ts/**/*.test.*",
+    "!build/ts/**/tests/",
     "index.js",
     "index.mjs",
     "index.esnext",
