--- a/packages/react-csrf/package.json
+++ b/packages/react-csrf/package.json
@@ -29,7 +29,7 @@
   "files": [
     "build/",
     "!build/*.tsbuildinfo",
-    "!build/ts/**/*.test.*",
+    "!build/ts/**/tests/",
     "index.js",
     "index.mjs",
     "index.esnext"
