--- a/packages/react-form-state/package.json
+++ b/packages/react-form-state/package.json
@@ -37,7 +37,7 @@
   "files": [
     "build/",
     "!build/*.tsbuildinfo",
-    "!build/ts/**/*.test.*",
+    "!build/ts/**/tests/",
     "index.js",
     "index.mjs",
     "index.esnext"
