--- a/packages/react-graphql/package.json
+++ b/packages/react-graphql/package.json
@@ -43,7 +43,7 @@
   "files": [
     "build/",
     "!build/*.tsbuildinfo",
-    "!build/ts/**/*.test.*",
+    "!build/ts/**/tests/",
     "index.js",
     "index.mjs",
     "index.esnext"
