--- a/packages/react-i18n/package.json
+++ b/packages/react-i18n/package.json
@@ -73,7 +73,7 @@
   "files": [
     "build/",
     "!build/*.tsbuildinfo",
-    "!build/ts/**/*.test.*",
+    "!build/ts/**/tests/",
     "index.js",
     "index.mjs",
     "index.esnext",
