--- a/packages/react-server/package.json
+++ b/packages/react-server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-server",
-  "version": "1.2.4",
+  "version": "2.0.0-webpack-5-beta.1",
   "license": "MIT",
   "description": "Utilities for React server-side rendering",
   "main": "index.js",
@@ -38,7 +38,7 @@
     "@shopify/react-html": "^11.1.4",
     "@shopify/react-hydrate": "^2.1.3",
     "@shopify/react-network": "^4.1.4",
-    "@shopify/sewing-kit-koa": "^7.0.2-webpack-5-betat.10",
+    "@shopify/sewing-kit-koa": "^8.0.0-webpack-5-beta.1",
     "@shopify/useful-types": "^3.0.4",
     "chalk": "^2.4.2",
     "koa": "^2.5.0",
