--- a/packages/web-worker/package.json
+++ b/packages/web-worker/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/web-worker",
-  "version": "2.1.4",
+  "version": "3.0.0-webpack-5-beta.1",
   "license": "MIT",
   "description": "Tools for making web workers fun to use",
   "main": "index.js",
