revert accidentally removed include config

--- a/packages/react-web-worker/tsconfig.json
+++ b/packages/react-web-worker/tsconfig.json
@@ -6,6 +6,7 @@
     "rootDir": "src",
     "baseUrl": "src"
   },
+  "include": ["./src/**/*.ts", "./src/**/*.tsx"],
   "references": [
     {"path": "../react-hooks"},
     {"path": "../useful-types"},
