--- a/packages/graphql-fixtures/package.json
+++ b/packages/graphql-fixtures/package.json
@@ -31,7 +31,7 @@
     "graphql-tool-utilities": "^2.1.1"
   },
   "peerDependencies": {
-    "graphql-typed": "^0.6.1"
+    "graphql-typed": ">=0.6.1 <2.0.0"
   },
   "files": [
     "build/",
