--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
   },
   "resolutions": {
     "@types/react": "17.0.13",
-    "@types/react-dom": "17.0.8"
+    "@types/react-dom": "17.0.8",
+    "get-port": "^5.1.0"
   }
 }
