--- a/packages/rpc/package.json
+++ b/packages/rpc/package.json
@@ -16,5 +16,6 @@
   "bugs": {
     "url": "https://github.com/Shopify/quilt/issues"
   },
-  "homepage": "https://github.com/Shopify/quilt/blob/main/packages/rpc/README.md"
+  "homepage": "https://github.com/Shopify/quilt/blob/main/packages/rpc/README.md",
+  "files": []
 }
