--- a/packages/async/package.json
+++ b/packages/async/package.json
@@ -36,8 +36,7 @@
     "@babel/traverse": ">=7.0.0",
     "@babel/types": ">=7.0.0",
     "@types/babel__core": ">=7.0.0",
-    "@types/babel__traverse": ">=7.0.0",
-    "@types/webpack": "^4.0.0"
+    "@types/babel__traverse": ">=7.0.0"
   },
   "files": [
     "build/",
