--- a/packages/react-app-bridge-universal-provider/package.json
+++ b/packages/react-app-bridge-universal-provider/package.json
@@ -31,7 +31,8 @@
     "react": ">=16.8.0 <18.0.0"
   },
   "devDependencies": {
-    "faker": "^4.1.0"
+    "faker": "^4.1.0",
+    "@shopify/jest-dom-mocks": "^3.0.9"
   },
   "files": [
     "build/",
