--- a/packages/react-app-bridge-universal-provider/tsconfig.json
+++ b/packages/react-app-bridge-universal-provider/tsconfig.json
@@ -10,5 +10,5 @@
     "./src/**/*.ts",
     "./src/**/*.tsx"
   ],
-  "references": [{"path": "../react-html"}]
+  "references": [{"path": "../react-html"}, {"path": "../jest-dom-mocks"}]
 }
