--- a/packages/magic-entries-webpack-plugin/package.json
+++ b/packages/magic-entries-webpack-plugin/package.json
@@ -16,5 +16,5 @@
   "bugs": {
     "url": "https://github.com/Shopify/quilt/issues"
   },
-  "homepage": "https://github.com/Shopify/quilt/blob/main/packages/magic-entries-webpack-plugin/README.md",
+  "homepage": "https://github.com/Shopify/quilt/blob/main/packages/magic-entries-webpack-plugin/README.md"
 }
