--- a/packages/react-app-bridge-universal-provider/package.json
+++ b/packages/react-app-bridge-universal-provider/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-app-bridge-universal-provider",
-  "version": "2.1.11",
+  "version": "2.1.10",
   "license": "MIT",
   "description": "A self-serializing/deserializing `app-bridge-react` provider that works for isomorphic applications",
   "main": "index.js",
@@ -31,8 +31,8 @@
     "react": ">=16.8.0 <18.0.0"
   },
   "devDependencies": {
-    "@shopify/jest-dom-mocks": "^3.0.9",
-    "faker": "^4.1.0"
+    "faker": "^4.1.0",
+    "@shopify/jest-dom-mocks": "^3.0.9"
   },
   "files": [
     "build/",
