--- a/packages/graphql-mini-transforms/package.json
+++ b/packages/graphql-mini-transforms/package.json
@@ -1,6 +1,6 @@
 {
   "name": "graphql-mini-transforms",
-  "version": "4.0.0-wp5-beta.6",
+  "version": "3.2.2",
   "license": "MIT",
   "description": "Transformers for importing .graphql files in various build tools.",
   "main": "index.js",
