--- a/packages/react-i18n-universal-provider/package.json
+++ b/packages/react-i18n-universal-provider/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-i18n-universal-provider",
-  "version": "3.0.0-wp5-beta.1",
+  "version": "2.1.16",
   "license": "MIT",
   "description": "A self-serializing/deserializing i18n provider that works for isomorphic applications",
   "main": "index.js",
@@ -26,7 +26,7 @@
   "dependencies": {
     "@shopify/react-hooks": "^2.1.8",
     "@shopify/react-html": "^11.1.10",
-    "@shopify/react-i18n": "^7.0.0-wp5-beta.1"
+    "@shopify/react-i18n": "^6.2.6"
   },
   "peerDependencies": {
     "react": ">=16.8.0 <18.0.0"
