--- a/packages/react-i18n/package.json
+++ b/packages/react-i18n/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-i18n",
-  "version": "7.0.0-wp5-beta.1",
+  "version": "6.2.6",
   "license": "MIT",
   "description": "i18n utilities for React handling translations, formatting, and more",
   "main": "index.js",
@@ -46,7 +46,7 @@
     "intl-pluralrules": "^0.2.1"
   },
   "dependencies": {
-    "@shopify/dates": "^2.0.0-wp5-beta.1",
+    "@shopify/dates": "^1.0.10",
     "@shopify/decorators": "^2.0.4",
     "@shopify/function-enhancers": "^2.0.4",
     "@shopify/i18n": "^1.0.5",
