--- a/packages/address/package.json
+++ b/packages/address/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/address",
-  "version": "3.0.12",
+  "version": "3.0.12-tryrequire-beta.1",
   "license": "MIT",
   "description": "Address utilities for formatting addresses",
   "main": "index.js",
@@ -23,8 +23,8 @@
     "node": ">=12.14.0"
   },
   "devDependencies": {
-    "@shopify/address-mocks": "^2.0.12",
-    "@shopify/jest-dom-mocks": "^3.0.10"
+    "@shopify/address-mocks": "^2.0.12-tryrequire-beta.1",
+    "@shopify/jest-dom-mocks": "^3.0.10-tryrequire-beta.1"
   },
   "sideEffects": false,
   "dependencies": {
