--- a/packages/react-async/package.json
+++ b/packages/react-async/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-async",
-  "version": "4.1.13",
+  "version": "4.1.13-tryrequire-beta.1",
   "license": "MIT",
   "description": "Tools for creating powerful, asynchronously-loaded React components",
   "main": "index.js",
@@ -31,11 +31,11 @@
     "node": ">=12.14.0"
   },
   "dependencies": {
-    "@shopify/async": "^3.1.0",
+    "@shopify/async": "^3.1.0-tryrequire-beta.1",
     "@shopify/react-effect": "^4.1.7",
     "@shopify/react-hooks": "^2.1.9",
     "@shopify/react-hydrate": "^2.1.10",
-    "@shopify/react-idle": "^2.1.7",
+    "@shopify/react-idle": "^2.1.7-tryrequire-beta.1",
     "@shopify/react-intersection-observer": "^3.1.7",
     "@shopify/useful-types": "^3.0.5"
   },
