--- a/packages/react-graphql-universal-provider/package.json
+++ b/packages/react-graphql-universal-provider/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-graphql-universal-provider",
-  "version": "4.3.7",
+  "version": "4.3.7-tryrequire-beta.1",
   "license": "MIT",
   "description": "A self-serializing/deserializing GraphQL provider that works for isomorphic applications",
   "main": "index.js",
@@ -24,7 +24,7 @@
     "node": ">=12.14.0"
   },
   "dependencies": {
-    "@shopify/react-graphql": "^7.1.15",
+    "@shopify/react-graphql": "^7.1.15-tryrequire-beta.1",
     "@shopify/react-hooks": "^2.1.9",
     "@shopify/react-html": "^11.1.11",
     "@shopify/react-network": "^4.1.12",
