--- a/packages/react-graphql/package.json
+++ b/packages/react-graphql/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-graphql",
-  "version": "7.1.15",
+  "version": "7.1.15-tryrequire-beta.1",
   "license": "MIT",
   "description": "Tools for creating type-safe and asynchronous GraphQL components for React",
   "main": "index.js",
@@ -26,11 +26,11 @@
   "dependencies": {
     "@apollo/react-common": ">=3.0.0 <4.0.0",
     "@apollo/react-hooks": ">=3.0.0 <4.0.0",
-    "@shopify/async": "^3.1.0",
-    "@shopify/react-async": "^4.1.13",
+    "@shopify/async": "^3.1.0-tryrequire-beta.1",
+    "@shopify/react-async": "^4.1.13-tryrequire-beta.1",
     "@shopify/react-effect": "^4.1.7",
     "@shopify/react-hooks": "^2.1.9",
-    "@shopify/react-idle": "^2.1.7",
+    "@shopify/react-idle": "^2.1.7-tryrequire-beta.1",
     "@shopify/useful-types": "^3.0.5",
     "apollo-cache-inmemory": ">=1.0.0 <2.0.0",
     "apollo-client": ">=2.0.0 <3.0.0",
