--- a/packages/react-import-remote/package.json
+++ b/packages/react-import-remote/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-import-remote",
-  "version": "2.1.13",
+  "version": "2.1.13-tryrequire-beta.1",
   "license": "MIT",
   "description": "Asynchronous script loading for React",
   "main": "index.js",
@@ -23,7 +23,7 @@
     "node": ">=12.14.0"
   },
   "dependencies": {
-    "@shopify/async": "^3.1.0",
+    "@shopify/async": "^3.1.0-tryrequire-beta.1",
     "@shopify/react-hooks": "^2.1.9",
     "@shopify/react-html": "^11.1.11",
     "@shopify/react-intersection-observer": "^3.1.7",
