--- a/packages/koa-performance/package.json
+++ b/packages/koa-performance/package.json
@@ -28,10 +28,10 @@
     "@shopify/performance": "^2.0.10",
     "@shopify/statsd": "^3.0.8",
     "@types/koa": "^2.0.0",
-    "@types/koa-bodyparser": "4.3.5",
+    "@types/koa-bodyparser": "*",
     "@types/koa-compose": "*",
-    "koa-bodyparser": "^4.3.0",
-    "koa-compose": "^4.1.0"
+    "koa-bodyparser": ">=4.0.0 <5.0.0",
+    "koa-compose": ">=4.0.0 <5.0.0"
   },
   "peerDependencies": {
     "koa": ">=2.0.0"
