--- a/packages/sewing-kit-koa/package.json
+++ b/packages/sewing-kit-koa/package.json
@@ -31,7 +31,7 @@
     "browserslist-useragent": "^2.0.1",
     "fs-extra": "^9.1.0",
     "koa": "^2.13.4",
-    "koa-compose": "^4.1.0",
+    "koa-compose": ">=4.0.0 <5.0.0",
     "koa-mount": "^4.0.0",
     "koa-static": "^5.0.0",
     "node-gzip": "^1.1.2"
