--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@apollo/react-common": "^3.1.3",
     "@apollo/react-hooks": "^3.1.3",
     "@babel/core": "^7.14.6",
+    "@faker-js/faker": "^5.5.3",
     "@shopify/app-bridge": "^2.0.3",
     "@shopify/babel-preset": "^24.1.2",
     "@shopify/browserslist-config": "^2.2.4",
@@ -50,7 +51,7 @@
     "@shopify/loom-plugin-prettier": "^0.2.0",
     "@shopify/loom-plugin-typescript": "^0.8.0",
     "@shopify/typescript-configs": "^5.0.0",
-    "@types/faker": "^4.1.5",
+    "@types/faker": "^5.5.9",
     "@types/react": "17.0.13",
     "@types/react-dom": "^17.0.8",
     "apollo-cache-inmemory": "^1.3.6",
@@ -58,7 +59,6 @@
     "babel-loader": "^8.0.6",
     "cross-fetch": "^3.0.4",
     "element-closest": "^3.0.1",
-    "faker": "^4.1.0",
     "fs-extra": "^9.1.0",
     "full-icu": "^1.3.0",
     "get-port": "^5.0.0",
