--- a/packages/react-app-bridge-universal-provider/package.json
+++ b/packages/react-app-bridge-universal-provider/package.json
@@ -31,8 +31,7 @@
     "react": ">=16.8.0 <18.0.0"
   },
   "devDependencies": {
-    "@shopify/jest-dom-mocks": "^3.0.11",
-    "faker": "^4.1.0"
+    "@shopify/jest-dom-mocks": "^3.0.11"
   },
   "files": [
     "build/",
