--- a/packages/react-form-state/package.json
+++ b/packages/react-form-state/package.json
@@ -30,8 +30,7 @@
     "react": ">=16.8.0 <18.0.0"
   },
   "devDependencies": {
-    "@shopify/useful-types": "^3.0.5",
-    "faker": "^4.1.0"
+    "@shopify/useful-types": "^3.0.5"
   },
   "sideEffects": false,
   "files": [
