Update export maps to export cjs only for node consumers

--- a/packages/async/package.json
+++ b/packages/async/package.json
@@ -53,9 +53,7 @@
   "esnext": "index.esnext",
   "exports": {
     "./babel": {
-      "esnext": "./babel.esnext",
-      "import": "./babel.mjs",
-      "require": "./babel.js"
+      "default": "./babel.js"
     },
     ".": {
       "esnext": "./index.esnext",
