update tests and exports

--- a/packages/async/package.json
+++ b/packages/async/package.json
@@ -52,9 +52,7 @@
   "module": "index.mjs",
   "esnext": "index.esnext",
   "exports": {
-    "./babel": {
-      "default": "./babel.js"
-    },
+    "./babel":"./babel.js",
     ".": {
       "esnext": "./index.esnext",
       "import": "./index.mjs",
