Update react-graphql to Apollo 3

--- a/packages/react-graphql/package.json
+++ b/packages/react-graphql/package.json
@@ -24,18 +24,14 @@
     "node": ">=12.14.0"
   },
   "dependencies": {
-    "@apollo/react-common": ">=3.0.0 <4.0.0",
-    "@apollo/react-hooks": ">=3.0.0 <4.0.0",
-    "@shopify/async": "^3.1.5",
-    "@shopify/react-async": "^4.1.22",
-    "@shopify/react-effect": "^4.1.11",
-    "@shopify/react-hooks": "^2.1.18",
-    "@shopify/react-idle": "^2.1.13",
-    "@shopify/useful-types": "^4.0.2",
-    "apollo-cache-inmemory": ">=1.0.0 <2.0.0",
-    "apollo-client": ">=2.0.0 <3.0.0",
-    "apollo-link": ">=1.0.0 <2.0.0",
-    "graphql-typed": "^1.1.5"
+    "@apollo/client": "^3.5.10",
+    "@shopify/async": "^3.1.4",
+    "@shopify/react-async": "^4.1.21",
+    "@shopify/react-effect": "^4.1.10",
+    "@shopify/react-hooks": "^2.1.17",
+    "@shopify/react-idle": "^2.1.12",
+    "@shopify/useful-types": "^4.0.1",
+    "graphql-typed": "^1.1.4"
   },
   "devDependencies": {
     "@shopify/react-testing": "^3.3.9"
