--- a/package.json
+++ b/package.json
@@ -34,8 +34,7 @@
     "packages/*"
   ],
   "devDependencies": {
-    "@apollo/react-common": "^3.1.3",
-    "@apollo/react-hooks": "^3.1.3",
+    "@apollo/client": "^3.5.10",
     "@babel/core": "^7.14.6",
     "@faker-js/faker": "^5.5.3",
     "@shopify/app-bridge": "^2.0.3",
@@ -51,8 +50,6 @@
     "@types/faker": "^5.5.9",
     "@types/react": "^17.0.13",
     "@types/react-dom": "^17.0.8",
-    "apollo-cache-inmemory": "^1.3.6",
-    "apollo-client": "^2.3.8",
     "babel-loader": "^8.0.6",
     "cross-fetch": "^3.0.4",
     "element-closest": "^3.0.1",
