--- a/packages/graphql-persisted/package.json
+++ b/packages/graphql-persisted/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/graphql-persisted",
-  "version": "3.1.5",
+  "version": "3.2.0-apollo-3-beta.1",
   "license": "MIT",
   "description": "Apollo and Koa integrations for persisted GraphQL queries.",
   "typesVersions": {
