--- a/packages/react-graphql-universal-provider/package.json
+++ b/packages/react-graphql-universal-provider/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-graphql-universal-provider",
-  "version": "4.4.11",
+  "version": "4.5.0-apollo-3-beta.1",
   "license": "MIT",
   "description": "A self-serializing/deserializing GraphQL provider that works for isomorphic applications",
   "main": "index.js",
@@ -24,11 +24,11 @@
     "node": ">=12.14.0"
   },
   "dependencies": {
-    "@shopify/react-graphql": "^7.1.25",
+    "@apollo/client": "^3.5.10",
+    "@shopify/react-graphql": "^7.2.0-apollo-3-beta.1",
     "@shopify/react-hooks": "^2.1.18",
     "@shopify/react-html": "^11.1.21",
-    "@shopify/react-network": "^4.2.11",
-    "@apollo/client": "^3.5.10"
+    "@shopify/react-network": "^4.2.11"
   },
   "peerDependencies": {
     "react": ">=16.8.0 <18.0.0"
