Tidying up gitignore, unneeded preview and fix babel config

--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,7 @@ packages/*/*.js
 !packages/*/.eslintrc.js
 
 .package-build-cache
+
+
+# Generated data
+packages/storybook-a11y-test/tests/fixtures/storybook
