--- a/gems/quilt_rails/.rubocop.yml
+++ b/gems/quilt_rails/.rubocop.yml
@@ -1,15 +1,13 @@
-# This file strictly follows the rules defined in the Ruby style guide:
-#   http://shopify.github.io/ruby-style-guide/
-# Before updating anything please sync-up with #ruby-style-guide on Slack.
 inherit_gem:
   rubocop-shopify: rubocop.yml
 
 AllCops:
-  TargetRubyVersion: 2.6.3
+  TargetRubyVersion: 3.1
   Exclude:
     - 'node_modules/**/*'
     - 'test/**/node_modules/**/*'
     - 'vendor/**/*'
+    - 'bin/*'
     - '*.gemspec'
 
 Metrics/PerceivedComplexity:
@@ -45,30 +43,3 @@ Metrics/ClassLength:
   Max: 100
   Exclude:
     - test/**/*
-
-Naming/MethodName:
-  Exclude:
-    - test/**/*
-
-Style/ClassAndModuleChildren:
-  Enabled: false
-
-Layout/LineLength:
-  Max: 120
-  Exclude:
-    - Guardfile
-    - Gemfile
-    - config/**/*
-    - bin/**/*
-
-Style/MethodCallWithArgsParentheses:
-  Exclude:
-    - bin/**/*
-
-Style/PerlBackrefs:
-  Exclude:
-    - bin/**/*
-
-Style/SpecialGlobalVars:
-  Exclude:
-    - bin/**/*
