--- a/gems/quilt_rails/Gemfile
+++ b/gems/quilt_rails/Gemfile
@@ -1,14 +1,13 @@
 # frozen_string_literal: true
-source('https://rubygems.org')
+
+source("https://rubygems.org")
 
 gemspec
 
-gem('rubocop-shopify', require: false)
-
 group :test do
-  gem 'minitest'
-  gem 'minitest-hooks'
-  gem 'mocha'
-  gem 'pry'
-  gem 'sqlite3'
+  gem "minitest"
+  gem "minitest-hooks"
+  gem "mocha"
+  gem "pry"
+  gem "sqlite3"
 end
