--- a/gems/quilt_rails/Rakefile
+++ b/gems/quilt_rails/Rakefile
@@ -1,28 +1,28 @@
 # frozen_string_literal: true
 
-require 'bundler/gem_tasks'
+require "bundler/gem_tasks"
 
 begin
-  require 'bundler/setup'
+  require "bundler/setup"
 rescue LoadError
-  puts 'You must `gem install bundler` and `bundle install` to run rake tasks'
+  puts "You must `gem install bundler` and `bundle install` to run rake tasks"
 end
 
 Bundler::GemHelper.install_tasks
 
-require File.expand_path('../test/dummy/config/application', __FILE__)
+require File.expand_path("../test/dummy/config/application", __FILE__)
 
-require 'rake/testtask'
+require "rake/testtask"
 
 Rake::TestTask.new do |t|
-  t.libs << 'test'
-  t.pattern = 'test/**/*_test.rb'
+  t.libs << "test"
+  t.pattern = "test/**/*_test.rb"
 end
 
 Rake::TestTask.new do |t|
-  t.libs << 'test'
-  t.name = 'test:unit'
-  t.pattern = 'test/quilt_rails/**/*_test.rb'
+  t.libs << "test"
+  t.name = "test:unit"
+  t.pattern = "test/quilt_rails/**/*_test.rb"
 end
 
-task(default: %i(test))
+task(default: [:test])
