--- a/packages/react-html/package.json
+++ b/packages/react-html/package.json
@@ -37,8 +37,8 @@
     "serialize-javascript": "^3.0.0"
   },
   "peerDependencies": {
-    "react": ">=16.8.0 <18.0.0",
-    "react-dom": ">=16.8.0 <18.0.0"
+    "react": ">=16.8.0",
+    "react-dom": ">=16.8.0"
   },
   "devDependencies": {
     "@shopify/react-testing": "^3.3.10",
