--- a/packages/react-router/package.json
+++ b/packages/react-router/package.json
@@ -29,8 +29,8 @@
     "react-router-dom": ">=5.1.0 <6.0.0"
   },
   "peerDependencies": {
-    "react": ">=16.8.0 <18.0.0",
-    "react-dom": ">=16.8.0 <18.0.0"
+    "react": ">=16.8.0",
+    "react-dom": ">=16.8.0"
   },
   "files": [
     "build/",
