--- a/packages/react-form/package.json
+++ b/packages/react-form/package.json
@@ -24,7 +24,7 @@
     "node": ">=12.14.0"
   },
   "peerDependencies": {
-    "react": ">=16.8.0 <18.0.0"
+    "react": ">=16.8.0"
   },
   "files": [
     "build/",
