--- a/packages/react-server/package.json
+++ b/packages/react-server/package.json
@@ -61,8 +61,8 @@
   },
   "peerDependencies": {
     "cross-fetch": ">=3.0.0",
-    "react": ">=16.8.0 <18.0.0",
-    "react-dom": ">=16.8.0 <18.0.0"
+    "react": ">=16.8.0",
+    "react-dom": ">=16.8.0"
   },
   "optionalDependencies": {
     "@babel/types": ">=7.0.0",
