--- a/packages/react-web-worker/package.json
+++ b/packages/react-web-worker/package.json
@@ -29,8 +29,8 @@
     "@shopify/web-worker": "^4.0.5"
   },
   "peerDependencies": {
-    "react": ">=16.8.0 <18.0.0",
-    "react-dom": ">=16.8.0 <18.0.0"
+    "react": ">=16.8.0",
+    "react-dom": ">=16.8.0"
   },
   "files": [
     "build/",
