Unpin react to allow v18

--- a/packages/react-performance/package.json
+++ b/packages/react-performance/package.json
@@ -27,7 +27,7 @@
     "@shopify/performance": "^3.0.0"
   },
   "peerDependencies": {
-    "react": ">=16.8.0 <18.0.0"
+    "react": ">=16.8.0"
   },
   "devDependencies": {
     "@shopify/network": "^3.0.0"
