--- a/packages/react-graphql-universal-provider/package.json
+++ b/packages/react-graphql-universal-provider/package.json
@@ -34,7 +34,7 @@
     "apollo-link-context": ">=1.0.0 <2.0.0"
   },
   "peerDependencies": {
-    "react": ">=16.8.0 <18.0.0"
+    "react": ">=16.8.0"
   },
   "devDependencies": {
     "@shopify/react-effect": "^5.0.0"
