--- a/packages/react-hydrate/package.json
+++ b/packages/react-hydrate/package.json
@@ -28,7 +28,7 @@
     "@shopify/react-hooks": "^3.0.0"
   },
   "peerDependencies": {
-    "react": ">=16.8.0 <18.0.0"
+    "react": ">=16.8.0"
   },
   "files": [
     "build/",
