Fix Debug current test with Loom + all tests + changed tests (debug current test command) (#2224)
* Fix Loom Debug for current test

Fix loom test debug

format prettier

* Fix debug all tests + add debug changed tests

Co-authored-by: Ben Scott <ben.scott@shopify.com>

Co-authored-by: Ben Scott <ben.scott@shopify.com>

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,30 +2,34 @@
   "version": "0.2.0",
   "configurations": [
     {
+      "name": "Debug All Tests (loom)",
       "type": "node",
       "request": "launch",
-      "name": "Jest All",
-      "program": "${workspaceFolder}/node_modules/.bin/jest",
-      "args": ["--runInBand"],
+      "program": "${workspaceFolder}/node_modules/.bin/loom",
+      "args": ["test", "--debug", "--no-watch", "."],
       "console": "integratedTerminal",
       "internalConsoleOptions": "neverOpen",
-      "disableOptimisticBPs": true,
-      "windows": {
-        "program": "${workspaceFolder}/node_modules/jest/bin/jest"
-      }
+      "disableOptimisticBPs": true
     },
     {
+      "name": "Debug Changed Tests (loom)",
       "type": "node",
       "request": "launch",
-      "name": "Jest Current File",
-      "program": "${workspaceFolder}/node_modules/.bin/jest",
-      "args": ["${fileBasenameNoExtension}", "--config", "jest.config.js"],
+      "program": "${workspaceFolder}/node_modules/.bin/loom",
+      "args": ["test", "--debug", "--no-watch"],
       "console": "integratedTerminal",
       "internalConsoleOptions": "neverOpen",
-      "disableOptimisticBPs": true,
-      "windows": {
-        "program": "${workspaceFolder}/node_modules/jest/bin/jest"
-      }
+      "disableOptimisticBPs": true
+    },
+    {
+      "name": "Debug current test (loom)",
+      "type": "node",
+      "request": "launch",
+      "program": "${workspaceFolder}/node_modules/.bin/loom",
+      "args": ["test", "--debug", "--no-watch", "${relativeFile}"],
+      "console": "integratedTerminal",
+      "internalConsoleOptions": "neverOpen",
+      "disableOptimisticBPs": true
     }
   ]
 }
