--- a/packages/css-utilities/package.json
+++ b/packages/css-utilities/package.json
@@ -21,7 +21,7 @@
   },
   "homepage": "https://github.com/Shopify/quilt/blob/main/packages/css-utilities/README.md",
   "engines": {
-    "node": ">=14.18.0"
+    "node": ">=^14.17.0 || >=16.0.0"
   },
   "dependencies": {
     "classnames": "^2.3.1"
