--- a/packages/function-enhancers/package.json
+++ b/packages/function-enhancers/package.json
@@ -21,7 +21,7 @@
   },
   "homepage": "https://github.com/Shopify/quilt/blob/main/packages/function-enhancers/README.md",
   "engines": {
-    "node": ">=14.18.0"
+    "node": ">=^14.17.0 || >=16.0.0"
   },
   "files": [
     "build/",
