--- a/packages/graphql-mini-transforms/package.json
+++ b/packages/graphql-mini-transforms/package.json
@@ -34,7 +34,7 @@
   },
   "homepage": "https://github.com/Shopify/quilt/blob/main/packages/graphql-mini-transforms/README.md",
   "engines": {
-    "node": ">=14.18.0"
+    "node": ">=^14.17.0 || >=16.0.0"
   },
   "dependencies": {
     "@jest/transform": ">= 27 <29",
