--- a/packages/graphql-persisted/package.json
+++ b/packages/graphql-persisted/package.json
@@ -29,7 +29,7 @@
   },
   "homepage": "https://github.com/Shopify/quilt/blob/main/packages/graphql-persisted/README.md",
   "engines": {
-    "node": ">=14.18.0"
+    "node": ">=^14.17.0 || >=16.0.0"
   },
   "dependencies": {
     "@types/koa": "^2.0.0",
