--- a/packages/react-async/package.json
+++ b/packages/react-async/package.json
@@ -28,7 +28,7 @@
   },
   "homepage": "https://github.com/Shopify/quilt/blob/main/packages/react-async/README.md",
   "engines": {
-    "node": ">=14.18.0"
+    "node": ">=^14.17.0 || >=16.0.0"
   },
   "dependencies": {
     "@shopify/async": "^3.1.5",
