--- a/packages/react-bugsnag/package.json
+++ b/packages/react-bugsnag/package.json
@@ -21,7 +21,7 @@
   },
   "homepage": "https://github.com/Shopify/quilt/blob/main/packages/react-bugsnag/README.md",
   "engines": {
-    "node": ">=14.18.0"
+    "node": ">=^14.17.0 || >=16.0.0"
   },
   "dependencies": {
     "@bugsnag/js": "^7.1.1",
