--- a/packages/react-form-state/package.json
+++ b/packages/react-form-state/package.json
@@ -20,7 +20,7 @@
   },
   "homepage": "https://github.com/Shopify/quilt/blob/main/packages/react-form-state/README.md",
   "engines": {
-    "node": ">=14.18.0"
+    "node": ">=^14.17.0 || >=16.0.0"
   },
   "dependencies": {
     "@shopify/predicates": "^2.0.8",
