--- a/packages/react-form/package.json
+++ b/packages/react-form/package.json
@@ -21,7 +21,7 @@
   },
   "homepage": "https://github.com/Shopify/quilt/blob/main/packages/react-form/README.md",
   "engines": {
-    "node": ">=14.18.0"
+    "node": ">=^14.17.0 || >=16.0.0"
   },
   "peerDependencies": {
     "react": ">=16.8.0 <18.0.0"
