--- a/packages/web-worker/package.json
+++ b/packages/web-worker/package.json
@@ -51,7 +51,7 @@
   },
   "homepage": "https://github.com/Shopify/quilt/blob/main/packages/web-worker/README.md",
   "engines": {
-    "node": ">=14.18.0"
+    "node": ">=^14.17.0 || >=16.0.0"
   },
   "files": [
     "build/",
