--- a/packages/ast-utilities/package.json
+++ b/packages/ast-utilities/package.json
@@ -31,7 +31,7 @@
   },
   "homepage": "https://github.com/Shopify/quilt/blob/main/packages/ast-utilities/README.md",
   "engines": {
-    "node": ">=^14.17.0 || >=16.0.0"
+    "node": "^14.17.0 || >=16.0.0"
   },
   "devDependencies": {
     "@babel/core": ">=7.0.0",
