--- a/packages/graphql-typed/package.json
+++ b/packages/graphql-typed/package.json
@@ -21,7 +21,7 @@
   },
   "homepage": "https://github.com/Shopify/quilt/blob/main/packages/graphql-typed/README.md",
   "engines": {
-    "node": ">=^14.17.0 || >=16.0.0"
+    "node": "^14.17.0 || >=16.0.0"
   },
   "peerDependencies": {
     "graphql": ">=14.5.0 <16.0.0"
