--- a/packages/polyfills/package.json
+++ b/packages/polyfills/package.json
@@ -85,7 +85,7 @@
   },
   "homepage": "https://github.com/Shopify/quilt/blob/main/packages/polyfills/README.md",
   "engines": {
-    "node": ">=^14.17.0 || >=16.0.0"
+    "node": "^14.17.0 || >=16.0.0"
   },
   "dependencies": {
     "@shopify/useful-types": "^4.0.3",
