--- a/packages/react-i18n/package.json
+++ b/packages/react-i18n/package.json
@@ -33,7 +33,7 @@
   },
   "homepage": "https://github.com/Shopify/quilt/blob/main/packages/react-i18n/README.md",
   "engines": {
-    "node": ">=^14.17.0 || >=16.0.0"
+    "node": "^14.17.0 || >=16.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.14.6",
