--- a/packages/react-shortcuts/package.json
+++ b/packages/react-shortcuts/package.json
@@ -20,7 +20,7 @@
   },
   "homepage": "https://github.com/Shopify/quilt/blob/main/packages/react-shortcuts/README.md",
   "engines": {
-    "node": ">=^14.17.0 || >=16.0.0"
+    "node": "^14.17.0 || >=16.0.0"
   },
   "peerDependencies": {
     "react": ">=16.8.0 <18.0.0"
